[package]
name = "micro_traffic_sim_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
lazy_static = "1.5.0"
indexmap = "2.7.0"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shortest_path_benchmark"
harness = false

[lib]
name = "micro_traffic_sim_core"
path = "src/lib.rs"
