[package]
name = "micro_traffic_sim_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
lazy_static = "1.5.0"
indexmap = "2.12.0"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "shortest_path_benchmark"
harness = false

[lib]
name = "micro_traffic_sim_core"
path = "src/lib.rs"
